my_movies dummy

--- a/my_movies/Dockerfile
+++ b/my_movies/Dockerfile
@@ -19,8 +19,27 @@ RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf
 # Copy the application code
 COPY ./my_movies /var/www/html
 
-# Set the working directory
+# Set permissions
+RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
+
 WORKDIR /var/www/html
+RUN echo "APP_NAME=Laravel" > .env \
+    && echo "APP_ENV=local" >> .env \
+    && echo "APP_KEY=base64:AoqwHzgKC84+qV+AFbPpkNJMzCtg3FYzwwJ6w3czbuk=" >> .env \
+    && echo "APP_DEBUG=true" >> .env \
+    && echo "APP_URL=http://localhost" >> .env \
+    && echo "" >> .env \
+    && echo "DB_CONNECTION=mysql" >> .env \
+    && echo "DB_HOST=your_mysql_host" >> .env \
+    && echo "DB_PORT=3306" >> .env \
+    && echo "DB_DATABASE=your_database" >> .env \
+    && echo "DB_USERNAME=your_username" >> .env \
+    && echo "DB_PASSWORD=your_password" >> .env \
+    && echo "" >> .env \
+    && echo "CACHE_DRIVER=file" >> .env \
+    && echo "QUEUE_CONNECTION=sync" >> .env \
+    && echo "SESSION_DRIVER=file" >> .env \
+    && echo "SESSION_LIFETIME=120" >> .env
 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -29,6 +48,3 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 
 # Install project dependencies
 RUN composer install
-
-# Set permissions
-RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
